--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 <footer class="footer">
     <div class="footer-container">
         <ul class="footer-contact">
-            <li><a href="https://t.me/pasabilav" target="_blank"><img src="img/telegram.png" alt=""></a></li>
-            <li><a href="tel:+380663372555"><img src="img/phone.png" alt=""></a></li>
-            <li><a href="mailto:bosobilov@pm.me?subject=Работа" target="_blank"><img src="img/mail.png" alt=""></a></li>
+            <li><a href="https://t.me/pasabilav" target="_blank"><img src="css/img/telegram.png" alt="Write"></a></li>
+            <li><a href="tel:+380663372555"><img src="css/img/phone.png" alt="Call"></a></li>
+            <li><a href="mailto:bosobilov@pm.me?subject=Работа" target="_blank"><img src="css/img/mail.png" alt="bosobilov@pm.me"></a></li>
         </ul>
     </div>
 </footer>
